# nix-ffi

./: .gitignore  CMakeLists.txt  README.md  default.nix  main.cc  protocol.org  testsuite.cc  testsuite.hh
rust/: Cargo.toml
rust/src/: lib.rs
